// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article/Codebox Default smoke-test 1`] = `
<pre class="Codebox_pre___vcVQ language-js">
  <div class="Codebox_top__1r10k">
    <div class="Codebox_langBox__zXBm7">
      <button type="button"
              class="Codebox_lang__X6WDB Codebox_selected__gFZLU"
      >
        js
      </button>
    </div>
    <button type="button"
            class="Codebox_copy__ZEctM"
    >
      copy
    </button>
  </div>
  <div class="Codebox_content__jhl_a">
    <span class="token keyword">
      const
    </span>
    a
    <span class="token operator">
      =
    </span>
    <span class="token number">
      1
    </span>
    <span class="token punctuation">
      ;
    </span>
  </div>
</pre>
`;

exports[`Article/Codebox MultiLang smoke-test 1`] = `
<pre class="Codebox_pre___vcVQ language-js|language-mjs">
  <div class="Codebox_top__1r10k">
    <div class="Codebox_langBox__zXBm7">
      <button type="button"
              class="Codebox_lang__X6WDB Codebox_selected__gFZLU"
      >
        cjs
      </button>
      <button type="button"
              class="Codebox_lang__X6WDB"
      >
        mjs
      </button>
    </div>
    <button type="button"
            class="Codebox_copy__ZEctM"
    >
      copy
    </button>
  </div>
  <div class="Codebox_content__jhl_a">
    <span class="token keyword">
      const
    </span>
    http
    <span class="token operator">
      =
    </span>
    <span class="token function">
      require
    </span>
    <span class="token punctuation">
      (
    </span>
    <span class="token string">
      'http'
    </span>
    <span class="token punctuation">
      )
    </span>
    <span class="token punctuation">
      ;
    </span>
  </div>
</pre>
`;
